--- a/doc/docbook/en/ref/man1/gfpcopy.1.docbook
+++ b/doc/docbook/en/ref/man1/gfpcopy.1.docbook
@@ -6,7 +6,7 @@
 
 <refentry id="gfpcopy.1">
 
-<refentryinfo><date>30 Jun 2015</date></refentryinfo>
+<refentryinfo><date>27 Aug 2015</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfpcopy</refentrytitle>
@@ -23,7 +23,7 @@
 <cmdsynopsis sepchar=" ">
   <command moreinfo="none">gfpcopy</command>
   <arg choice="opt" rep="norepeat">-nqvdpPU</arg>
-  <arg choice="opt" rep="norepeat">-f</arg>
+  <arg choice="opt" rep="norepeat">-X <replaceable>regexp</replaceable></arg>
   <arg choice="opt" rep="norepeat">-S <replaceable>source-domainname</replaceable></arg>
   <arg choice="opt" rep="norepeat">-h <replaceable>source-hostfile</replaceable></arg>
   <arg choice="opt" rep="norepeat">-D <replaceable>destination-domainname</replaceable></arg>
@@ -38,6 +38,9 @@
   <arg choice="opt" rep="norepeat">-s <replaceable>KB/s-to-simulate</replaceable></arg>
   <arg choice="opt" rep="norepeat">-F <replaceable>num-for-readahead</replaceable></arg>
   <arg choice="opt" rep="norepeat">-b <replaceable>bufsize</replaceable></arg>
+  <arg choice="opt" rep="norepeat">-f</arg>
+  <arg choice="opt" rep="norepeat">-e</arg>
+  <arg choice="opt" rep="norepeat">-k</arg>
   <arg choice="plain" rep="norepeat"><replaceable>source-path</replaceable></arg>
   <arg choice="plain" rep="norepeat"><replaceable>destination-path</replaceable></arg>
 </cmdsynopsis>
@@ -206,6 +209,25 @@ source file.
 Without -f option, existing destination files will be overwritten when
 that they are older than the corresponding source files in the
 modification time.
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-e</option></term>
+<listitem>
+<para>
+Skips existing destination files in order to execute multiple gfpcopy
+simultaneously.
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-k</option></term>
+<listitem>
+<para>
+Does not copy symbolic links.
 </para>
 </listitem>
 </varlistentry>
