--- a/man/man5/gfarm2.conf.5
+++ b/man/man5/gfarm2.conf.5
@@ -2,12 +2,12 @@
 .\"     Title: gfarm2.conf
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 12 Jun 2013
+.\"      Date: 27 Aug 2015
 .\"    Manual: Gfarm
 .\"    Source: Gfarm
 .\"  Language: English
 .\"
-.TH "GFARM2\&.CONF" "5" "12 Jun 2013" "Gfarm" "Gfarm"
+.TH "GFARM2\&.CONF" "5" "27 Aug 2015" "Gfarm" "Gfarm"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -1600,6 +1600,27 @@ For example,
 .\}
 .nf
 	client_palallel_copy 10
+.fi
+.if n \{\
+.RE
+.\}
+.RE
+.PP
+client_parallel_max \fInum\-of\-parallel\fR
+.RS 4
+This directive specifies the maximum number of parallel for
+\fBgfprep\fR
+and
+\fBgfpcopy\fR
+to work in parallel\&. When this number is not specified, the default maximum number of parallel is 16\&.
+.sp
+For example,
+.sp
+.if n \{\
+.RS 4
+.\}
+.nf
+	client_palallel_max 8
 .fi
 .if n \{\
 .RE
