--- a/gfarm_v2/branches/2.6/doc/docbook/ja/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/branches/2.6/doc/docbook/ja/ref/man5/gfarm2.conf.5.docbook
@@ -2178,6 +2178,8 @@ replica_checkが動作するための最小間隔(秒)を指定します。
 	&lt;file_trace_statement&gt; |
 	&lt;fatal_action_statement&gt; |
 	&lt;debug_command_statement&gt; |
+	&lt;no_file_system_node_timeout_statement&gt; |
+	&lt;gfmd_reconnection_timeout_statement&gt; |
 <!--	&lt;record_atime_statement&gt; | -->
 	&lt;atime_statement&gt; |
 	&lt;client_digest_check_statement&gt; |
