--- a/doc/docbook/ja/ref/man1/gfwhere.1.docbook
+++ b/doc/docbook/ja/ref/man1/gfwhere.1.docbook
@@ -5,7 +5,7 @@
 
 <refentry id="gfwhere.1">
 
-<refentryinfo><date>14 May 2008</date></refentryinfo>
+<refentryinfo><date>17 Nov 2015</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfwhere</refentrytitle>
@@ -20,7 +20,7 @@
 <refsynopsisdiv id="synopsis">
 <cmdsynopsis sepchar=" ">
   <command moreinfo="none">gfwhere</command>
-    <arg choice="opt" rep="norepeat">-r, -R</arg>
+    <arg choice="opt" rep="norepeat"><replaceable>オプション</replaceable></arg>
     <arg choice="plain" rep="repeat"><replaceable>path</replaceable></arg>
 </cmdsynopsis>
 </refsynopsisdiv>
@@ -28,14 +28,97 @@
 <!-- body begins here -->
 
 <refsect1 id="description"><title>DESCRIPTION</title>
-<para>指定したファイルについて、レプリカの所在を表示します。
--r あるいは -R オプションを付けると、
-指定されたディレクトリに含まれるファイルのレプリカの所在を
-再帰的に表示します。</para>
+<para>
+指定したファイルについて、そのファイルのレプリカを保持する
+ファイルシステムノードのホスト名を表示します。
+</para>
 </refsect1>
 
 <refsect1 id="options"><title>OPTIONS</title>
 <variablelist>
+
+<varlistentry>
+<term><option>-a</option></term>
+<listitem>
+<para>
+全てのレプリカに関する情報を表示します。
+オプション <option>-dio</option> を指定するのと等価です。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-d</option></term>
+<listitem>
+<para>
+現在停止しているファイルシステムノード上に存在するレプリカの情報も表示します。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-F</option></term>
+<listitem>
+<para>
+ホスト名の直後に、以下の情報もつけ加えて表示します。
+論理的には削除されているが、まだ実体が残っている可能性のあるレプリカの場合
+「;世代番号」、
+複製途中の不完全なレプリカの場合「?」、
+停止中のファイルシステムノードの場合「-」。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-i</option></term>
+<listitem>
+<para>
+複製処理途中で、不完全な状態のレプリカの情報も表示します。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-l</option></term>
+<listitem>
+<para>
+以下のように、より長い形式で表示します。
+</para>
+<para>
+一行に、ひとつのホストのみ表示して改行します。
+</para>
+<para>
+<option>-o</option> オプションないし <option>-a</option> オプションが
+指定されている場合は、ホスト名の後にレプリカの世代番号も表示します。
+</para>
+<para>
+<option>-d</option> オプションないし <option>-a</option> オプションが
+指定されている場合は、その次に、そのホストが停止しているか否かを表示します。
+停止している場合は「d」、稼働している場合は「-」となります。
+</para>
+<para>
+<option>-i</option> オプションないし <option>-a</option> オプションが
+指定されている場合は、その次に、そのレプリカが不完全な状態か否かを表示します。
+複製途中で不完全な場合は「i」、完全な状態の場合は「-」となります。
+</para>
+<para>
+<option>-o</option> オプションないし <option>-a</option> オプションが
+指定されている場合は、その次に、そのレプリカが論理的に削除済か否かを表示します。
+論理的に削除済の場合は「o」、削除されていない場合は「-」となります。
+</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-o</option></term>
+<listitem>
+<para>
+論理的には削除されているが、物理的にはまだ存在している可能性があるレプリカの
+情報も表示します。
+</para>
+</listitem>
+</varlistentry>
+
 <varlistentry>
 <term><option>-r, -R</option></term>
 <listitem>
@@ -43,12 +126,14 @@
 再帰的に表示します。</para>
 </listitem>
 </varlistentry>
+
 <varlistentry>
 <term><option>-?</option></term>
 <listitem>
 <para>引数オプションを表示します。</para>
 </listitem>
 </varlistentry>
+
 </variablelist>
 </refsect1>
 </refentry>
